--- a/Wims/Wims.Infrastructure/Wims.Infrastructure.csproj
+++ b/Wims/Wims.Infrastructure/Wims.Infrastructure.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.23.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Wims.Application\Wims.Application.csproj" />
   </ItemGroup>
 
