Added Configuration Settings

--- a/Wims/Wims.Api/Wims.Api.csproj
+++ b/Wims/Wims.Api/Wims.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>1d47c7bd-36e6-485e-b8de-39b011c35b8f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
