--- a/Wims/Wims.Api/Wims.Api.csproj
+++ b/Wims/Wims.Api/Wims.Api.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="oneof" Version="3.0.223" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
