--- a/Wims/Wims.Application/Wims.Application.csproj
+++ b/Wims/Wims.Application/Wims.Application.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentResults" Version="3.13.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-    <PackageReference Include="oneof" Version="3.0.223" />
   </ItemGroup>
 
   <ItemGroup>
