--- a/Wims/Wims.Application/Wims.Application.csproj
+++ b/Wims/Wims.Application/Wims.Application.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="ErrorOr" Version="1.0.0" />
     <PackageReference Include="FluentResults" Version="3.13.0" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
