--- a/Wims/Wims.Api/Wims.Api.csproj
+++ b/Wims/Wims.Api/Wims.Api.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="ErrorOr" Version="1.0.0" />
     <PackageReference Include="FluentResults" Version="3.13.0" />
+    <PackageReference Include="mapster" Version="7.3.0" />
+    <PackageReference Include="mapster.DependencyInjection" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
